Corregida la consigna

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <h1>Lista de Galletas</h1>
     <h2>Consigna:</h2>
-    <p> Realice un algoritmo que muestre un listado de galletas y sus respectivos precios utilizando para esto arrays simples para cada atributo teniendo encuenta que en cada array la posición  de una galleta con su precio o propiedad se debe respetar.</p>
+    <p> Realice un programa que muestre un listado de galletas y sus respectivos precios utilizando para esto arrays simples individuales para cada atributo o propiedad, teniendo encuenta que en cada array la posición de una galleta debe coincidir con la posicion de su respectivo precio o propiedad en el otro array.</p>
     <h3>Extra:</h3>
     <p> Agrege un array con el peso neto en gramos y otro Array con la cantidad de unidad por pack.</p>
     <p> Muestre cual es la galleta más barata y cúal es la más cara.</p>
     <p> Muestre cual es la galleta más barata por unidad.</p>
     <p> Muestre cual es la galleta más barata por gramos.</p>
     <h3>Modo God:</h3>
-    <p> Muestre los precios de la lista de galletas en dólares a tipo de cambio  oficial y blue del 18/10/2023</p>
-    <p> Muestre los precios aproximados en pesos de la lista de galletas de hace 5 y 10 años teniendo en cuenta su precio en dolar oficial actual.</p>
+    <p> Muestre los precios de la lista de galletas en dólares a tipo de cambio oficial y blue del 18/10/2023</p>
+    <p> Muestre los precios aproximados en pesos de la lista de galletas de hace 5 y 10 años teniendo en cuenta su precio actual de dólar oficial.</p>
        <script src="script.js"></script>
 </body>
 </html>
